syntax = "proto3";

package pb;

service Todo {
    rpc Add (AddRequest) returns (AddReply) {
    }
    rpc List (ListRequest) returns (ListReply) {
    }
    rpc Done (DoneRequest) returns (DoneReply) {
    }
}


message AddRequest {
    string desc = 1;
}

message AddReply {
}


message ListRequest {
    DoneFilter doneFilter = 1;
}

message ListReply {
    repeated Task tasks = 1;
}


message DoneRequest {
    int32 index = 1;
}

message DoneReply {
}


message Task {
    string desc = 1;
    bool done = 2;
}

enum DoneFilter {
    NONE = 0;
    DONE = 1;
    NOT_DONE = 2;
}